/* $Id$ */


                      TAXONOMY CSV IMPORT/EXPORT
                      ==========================


== CHANGELOG ==
  ===========


Taxonomy csv import/export 7.x-5.3, 2010-08-20
Taxonomy csv import/export 6.x-5.3, 2010-08-20
----------------------------------------------
By Daniel Berthereau: Enabled plug-ins for specific formats.
By Daniel Berthereau: Implemented geotaxonomy import/export format.
By Daniel Berthereau: Simplified and standardized import process.


Taxonomy csv import/export 7.x-5.1, 2010-08-16
Taxonomy csv import/export 6.x-5.2, 2010-08-16
----------------------------------------------
By Daniel Berthereau: Fixed error of commit to cvs and linked bugs.
By Daniel Berthereau: Forget taxonomy_csv.css and taxonomy_csv.js (Drupal 6).
By Daniel Berthereau: Merged all taxonomy-csv 6.x branches except 6.x-1.
By Daniel Berthereau: Doxygened some help.


Taxonomy csv import/export 7.x-5.0, 2010-08-13
Taxonomy csv import/export 6.x-5.0, 2010-08-13
----------------------------------------------
By Daniel Berthereau: Changed cvs HEAD from 6.x to 7.x release.
By Daniel Berthereau: Merged all taxonomy-csv 7.x branches except 7.x-1.
By Daniel Berthereau: Modularized and simplified code and reintegrated line api.
By Daniel Berthereau: Use of new features of Drupal 7 (UI and Field).
By Daniel Berthereau: Implemented synonyms and related terms in 7.x release.
By Daniel Berthereau: Cleaned structure of user interface.
By Daniel Berthereau: Improved speed of tree and polyhierarchical import.
By Daniel Berthereau: Implemented quick import mode: no check of existing terms.
By Daniel Berthereau: Set hierarchy check disabled by default in user interface.
By Daniel Berthereau: Removed special permissions and use 'administer taxonomy'.
By Daniel Berthereau: Removed internal cache and use only core taxonomy ones.
By Daniel Berthereau: Removed utf8 conversion.
#872366 by vipzhicheng: Better support of non-Ascii characters.